style: fix background color of selected quick rule in dark mode

--- a/src/renderer/style/theme/antd-dark.less
+++ b/src/renderer/style/theme/antd-dark.less
@@ -40,6 +40,7 @@
 @input-bg: transparent;
 @input-number-handler-active-bg: @popover-background;
 @select-item-selected-font-weight: 600;
+@select-item-active-bg: fade(@white, 8%);
 @tooltip-bg: #434343;
 @popover-bg: @popover-background;
 @modal-header-bg: @popover-background;
